--- a/QR Decomposition.ipynb
+++ b/QR Decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b7c12573",
    "metadata": {
     "scrolled": true
@@ -12,15 +12,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.+0.j 0.+0.j]\n",
-      " [0.+0.j 2.+0.j]]\n"
+      "[[6.931+159.539j 0.     +0.j    0.     +0.j   ]\n",
+      " [0.     +0.j    7.429-147.719j 0.     +0.j   ]\n",
+      " [0.     +0.j    0.     +0.j    5.64   -4.82j ]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "A = np.array([[-1, -6], [2, 6]])\n",
+    "# A = np.array([[5., -1., -1.],\n",
+    "#              [0., 4., -1.],\n",
+    "#              [0, -1., 4.]])\n",
+    "\n",
+    "# A = np.array([[-1., -6.],\n",
+    "#              [2., 6.]])\n",
+    "\n",
+    "A = np.array([[3. + 3j, -5. + 0j, -1. + 7j],\n",
+    "             [8. + 0j, 4. + 4j, -1. + 0j],\n",
+    "             [4. + 0j, -9. + 5j, 13. + 0j]])\n",
     "\n",
     "def qr_decomi(A):\n",
     "    m, n = A.shape\n",
@@ -49,6 +59,8 @@
     "k = 0\n",
     "eps = 2e-8\n",
     "for i in range(n):\n",
+    "    Q, R = qr_decomi(A)\n",
+    "    A = R @ Q\n",
     "    while (np.linalg.det(A - A[i] * np.eye(A.shape[0])) > eps):\n",
     "        Q, R = qr_decomi(A)\n",
     "        A = R @ Q\n",
@@ -58,6 +70,14 @@
     "np.set_printoptions(precision = 3)\n",
     "print(np.diag(np.diag(A)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bcf6a71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
