--- a/QR Decomposition.ipynb
+++ b/QR Decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "b7c12573",
    "metadata": {
     "scrolled": true
@@ -12,46 +12,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17.509+0.542j  5.703+0.223j -3.212+0.235j]\n"
+      "[[ -4  -2  -7   8]\n",
+      " [  2   7   4   9]\n",
+      " [  2   0   6  -3]\n",
+      " [  6   4 -10  -4]] \n",
+      "\n",
+      "[-12.916776235184942, 11.03978036263004, 3.43849793627738 + 1.29738099271554*I, 3.43849793627738 - 1.29738099271554*I]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "np.set_printoptions(precision = 3)\n",
-    "\n",
-    "# A = np.array([[5., -1., -1.],\n",
-    "#              [0., 4., -1.],\n",
-    "#              [0, -1., 4.]])\n",
-    "\n",
-    "# A = np.array([[-4, -2, -7, 8],\n",
-    "#              [2, 7,  4, 9],\n",
-    "#              [2, 0, 6, -3],\n",
-    "#              [6, 4, -10, -4]])\n",
-    "\n",
-    "# A = np.array([[4, 1, 1, 2, 1], \n",
-    "#              [1, 2, -1, 1, 1],\n",
-    "#              [3, 1, 1, 1, 1],\n",
-    "#              [2, 1, 1, 4, 1],\n",
-    "#              [2, -1, 1, 1, 5]])\n",
-    "\n",
-    "# A = np.array([[complex(10,1), complex(4,0), complex(8,0)],\n",
-    "#              [complex(1,0), complex(7,0), complex(4,0)],\n",
-    "#              [complex(9,0), complex(5,0), complex(3,0)]])\n",
+    "import sympy as sp\n",
     "\n",
     "def qr_decomi(R):\n",
     "    m, n = R.shape\n",
-    "    Q = np.eye(m, dtype = complex)\n",
+    "    Q = np.eye(m)\n",
     "    for i in range(n - (m == n)):\n",
-    "        H = np.eye(m, dtype = complex)\n",
+    "        H = np.eye(m)\n",
     "        H[i:, i:] = House(R[i:, i])\n",
     "        Q = Q @ H\n",
     "        R = H @ R\n",
     "    return Q, R\n",
     "\n",
     "def House(A):\n",
-    "    e = np.zeros(A.shape[0], dtype = complex)\n",
+    "    e = np.zeros(A.shape[0])\n",
     "    e[0] = 1\n",
     "    if (A[0] < 0):\n",
     "        norm = -(np.linalg.norm(A) * e[:, None])\n",
@@ -59,28 +44,106 @@
     "        norm = np.linalg.norm(A) * e[:, None]\n",
     "    u = A[:, None] + norm\n",
     "    v = u / np.linalg.norm(u)\n",
-    "    I = np.eye(A.shape[0], dtype = complex)\n",
+    "    I = np.eye(A.shape[0])\n",
     "    H = I - ((2 * np.matmul(u, np.transpose(u))) / np.matmul(np.transpose(u), u))\n",
     "    return H\n",
     "\n",
-    "n = A.shape[0]\n",
-    "k = 0\n",
-    "eps = 1e-20\n",
-    "for i in range(n):\n",
-    "    Q, R = qr_decomi(A)\n",
-    "    A = np.dot(R, Q)\n",
-    "    while (np.linalg.det(A - A[i] * np.eye(n)) > eps):\n",
+    "\n",
+    "\n",
+    "# A = np.array([[11, 2, -8],\n",
+    "#               [2, 2, 10],\n",
+    "#               [-8, 10, 5]])\n",
+    "\n",
+    "# A = np.array([[1, -3, 4],\n",
+    "#               [4, -7, 8],\n",
+    "#               [6, -7, 7]])\n",
+    "\n",
+    "# A = np.array([[13, 9, -7],\n",
+    "#               [6, 8, -3],\n",
+    "#               [8, -1, 12]])\n",
+    "\n",
+    "A = np.array([[-4, -2, -7, 8],\n",
+    "              [2, 7,  4, 9],\n",
+    "              [2, 0, 6, -3],\n",
+    "              [6, 4, -10, -4]])\n",
+    "\n",
+    "# A = np.array([[4, 1, 1, 2, 1], \n",
+    "#               [1, 2, -1, 1, 1],\n",
+    "#               [3, 1, 1, 1, 1],\n",
+    "#               [2, 1, 1, 4, 1],\n",
+    "#               [2, -1, 1, 1, 5]])\n",
+    "\n",
+    "print(A, '\\n')\n",
+    "\n",
+    "def Find_eiegenValues(A):\n",
+    "    n = A.shape[0]\n",
+    "    k = 0\n",
+    "    itter = 0\n",
+    "    for i in range(n):\n",
     "        Q, R = qr_decomi(A)\n",
     "        A = np.dot(R, Q)\n",
-    "    k += 1\n",
-    "    if (k == n):\n",
-    "        break\n",
-    "print(np.diag(A))"
+    "        while (np.linalg.det(A - A[i] * np.eye(n)) != 0):\n",
+    "            Q, R = qr_decomi(A)\n",
+    "            A = np.dot(R, Q)\n",
+    "            itter += 1\n",
+    "            if (itter == 1000):\n",
+    "                itter = 0\n",
+    "                break\n",
+    "        k += 1\n",
+    "        if (k == n):\n",
+    "            break\n",
+    "    return A\n",
+    "\n",
+    "def Find_ComplexEigenValues(B):\n",
+    "    lambd = sp.symbols('lambd')\n",
+    "    n = B.shape[0]\n",
+    "    I = sp.eye(n)\n",
+    "    equation = sp.det(B - lambd * I)\n",
+    "    B = sp.solve(equation, lambd)\n",
+    "    return B\n",
+    "\n",
+    "A = Find_eiegenValues(A)\n",
+    "\n",
+    "n = len(A)\n",
+    "eps = 1e-16\n",
+    "flag = 1\n",
+    "Answer = []\n",
+    "for j in range(n - 2, -1, -1):\n",
+    "    B = np.zeros((2, 2))\n",
+    "    k = 0\n",
+    "    a = []\n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        if (i == j):\n",
+    "            if ((j + 1 + k) != n):\n",
+    "                for i2 in range(i, i + 2):\n",
+    "                    for j2 in range(j, j + 2):\n",
+    "                        B[i2 - i, j2 - j] = A[i2, j2]\n",
+    "            elif (flag == 1):\n",
+    "#                 print(A[i + 1, j + 1])\n",
+    "                Answer.append(A[i + 1][j + 1])\n",
+    "            if ((i == 0) and ((j + 1 + k) == n)):\n",
+    "#                 print(A[i, j])\n",
+    "                Answer.append(A[i][j])\n",
+    "            break                \n",
+    "        if (np.abs(A[i, j]) < eps):\n",
+    "            k += 1\n",
+    "        else:\n",
+    "            a.append(i)\n",
+    "    if (np.abs(B[1, 0]) > eps):\n",
+    "        flag = 0\n",
+    "        B = Find_ComplexEigenValues(B)\n",
+    "#         print(np.diag(np.diag(B)))\n",
+    "        for k in range(len(B)):\n",
+    "            Answer.append(B[k])\n",
+    "    else: \n",
+    "        flag = 1\n",
+    "Answer = Answer[::-1]\n",
+    "print(Answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "b9eb40e6",
    "metadata": {},
    "outputs": [
@@ -88,30 +151,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17.525+0.j  5.699+0.j -3.224+0.j]\n"
+      "[-12.91677624+0.j          11.03978036+0.j\n",
+      "   3.43849794+1.29738099j   3.43849794-1.29738099j]\n"
      ]
     }
    ],
    "source": [
-    "n = A.shape[0]\n",
-    "k = 0\n",
-    "eps = 1e-20\n",
-    "for i in range(n):\n",
-    "    Q, R = np.linalg.qr(A)\n",
-    "    A = np.dot(R, Q)\n",
-    "    while (np.linalg.det(A - A[i] * np.eye(n)) > eps):\n",
-    "        Q, R = np.linalg.qr(A)\n",
-    "        A = np.dot(R, Q)\n",
-    "    k += 1\n",
-    "    if (k == n):\n",
-    "        break\n",
-    "print(np.diag(A))"
+    "w, v = np.linalg.eig(A)\n",
+    "\n",
+    "print(w)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4b62f4d",
+   "id": "2e3f92b5",
    "metadata": {},
    "outputs": [],
    "source": []
